--- a/pages/nuestrahistoria.html
+++ b/pages/nuestrahistoria.html
@@ -37,10 +37,10 @@
                     productos
                     </a>
                     <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="./pages/chocolates.html">Chocolates</a></li>
-                    <li><a class="dropdown-item" href="./pages/paraelte.html">Para el té</a></li>
+                    <li><a class="dropdown-item" href="../pages/chocolates.html">Chocolates</a></li>
+                    <li><a class="dropdown-item" href="../pages/paraelte.html">Para el té</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="./pages/glutenfree.html">Gluten free</a></li>
+                    <li><a class="dropdown-item" href="../pages/glutenfree.html">Gluten free</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
