--- a/pages/chocolates.html
+++ b/pages/chocolates.html
@@ -25,7 +25,7 @@
                 <a class="nav-link  bg-colores" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link bg-colores" href="#">Nuestra historia</a>
+                <a class="nav-link bg-colores" href="../pages/nuestrahistoria.html">Nuestra historia</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle bg-colores" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
