modificaciones en las medidas del titulo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="principal-inicio">
+    <header>
         <nav class="navbar navbar-expand-lg bg-css">
             <div class="container-fluid">
             <img class="logo-chocolate1" src="./img/chocolate (1).png" alt="chocolate">
@@ -52,7 +52,9 @@
 
     </header>
     <main>
+       <div class="principal-inicio">
         <h1 class="titulo">ChocoDelight</h1>
+       </div>
         <section> 
             <article>
             <h2 class="secundario-inicio">Nuevos chocolates sin tacc</h2>
