--- a/pages/nuestrahistoria.html
+++ b/pages/nuestrahistoria.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <header class="nuestra-historia">
+    <header>
         <nav class="navbar navbar-expand-lg bg-css">
             <div class="container-fluid">
             <img class="logo-chocolate1" src="../img/chocolate (1).png" alt="chocolate">
@@ -60,8 +60,10 @@
    </header>
 
    <main>
+    <div class="nuestra-historia">
 
     <h1 class="titulo-nuestra">Nuestra historia</h1>
+    </div>
 
    
     <section>
