--- a/pages/paraelte.html
+++ b/pages/paraelte.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<header class="principal-chocolate">
+<header>
     <nav class="navbar navbar-expand-lg bg-css">
         <div class="container-fluid">
         <img class="logo-chocolate1" src="../img/chocolate (1).png" alt="chocolate">
@@ -54,9 +54,10 @@
 
 </header>
 
-<main>
+<main> 
+    <div class="principal-chocolate">
     <h1 class="titulo-para-el-te">Para el té</h1>
-
+</div>
     <section>
        <h2 class="inicio-chocolate">Inicio · para el té</h2>
     
