--- a/pages/chocolates.html
+++ b/pages/chocolates.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <header class="principal-chocolate">
+    <header>
       <nav class="navbar navbar-expand-lg bg-css">
         <div class="container-fluid">
         <img class="logo-chocolate1" src="../img/chocolate (1).png" alt="chocolate">
@@ -53,7 +53,9 @@
    </header>
 
    <main>
+   <div class="principal-chocolate">
              <h1 class="titulo-secundario">Chocolates</h1>
+            </div>
 
              <section>
                 <h2 class="inicio-chocolate">Inicio · chocolates</h2>
