--- a/pages/glutenfree.html
+++ b/pages/glutenfree.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <header class="principal-chocolate">
+    <header>
         <nav class="navbar navbar-expand-lg bg-css">
             <div class="container-fluid">
             <img class="logo-chocolate1" src="../img/chocolate (1).png" alt="chocolate">
@@ -52,9 +52,10 @@
    </header>
 
    <main>
+    <div class="principal-chocolate">
     <h1 class="titulo-secundario">Gluten free</h1>
     <img class="gluten-free" src="../img/sin-gluten.png" alt="Sin gluten">
-
+</div>
     <section>
        <h2 class="inicio-chocolate">Inicio · gluten free</h2>
        <div class="grid-container">
