--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="Ingresa a la tienda online de Chocodelight y descubrí todas sus novedades." content="Sitio web oficial, ultimas novedades y tendencias en los mas deliciosos chocolates de Argentina, envio a todo el país.">
+    <meta name="keywords" content="Tienda de chocolates online, bombones, trufas, alfajores, chocolates sin tacc y dieteticos">
+    <meta name="author" content="Me comprometo como profesional con experiencia de desarrollo web a compartir mi conocimiento y lo aprendido durante este tiempo mediante contenido de suma importancia y con contenido de buena calidad, demostrare mi autoridad en el campo y aumentare mi visibilidad en línea, estableciendome como un referente en la industria.">
+    <meta name="copyright" content="Tienda de chocolates">
+
+    <meta property="og:title" content=Chocolates>
+    <meta property="og:site_name" content=ChocoDelight>
+    <meta property="og:url" content=www.ChocoDelight.com>
+    <meta property="og:description" content=ChocoDelight tu tienda online de chocolates gourmet, descubrí los productos con ingredientes de alta calidad y amor. Nuestra tienda online ofrece una variedad de chocolates para satisfacer tus antojos, desde clásicos bombones hasta creaciones innovadoras.>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="https://malenad5.github.io/proyecto-final-comisi-n-57670/img/chocolates/oso-con-pelota_1.jpg">
+
+    <meta name="robots" content="no index, follow">
+
     <title>ChocoDelight</title>
+    <link rel="shortcut icon" href="./img/1.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -52,9 +68,9 @@
 
     </header>
     <main>
-       <div class="principal-inicio">
+        <div class="principal-inicio">
         <h1 class="titulo">ChocoDelight</h1>
-       </div>
+        </div>
         <section> 
             <article>
             <h2 class="secundario-inicio">Nuevos chocolates sin tacc</h2>
@@ -72,7 +88,7 @@
         <h3>Contactanos</h3>
         <h3>Términos y Condiciones</h3>
     </footer>
- 
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
