--- a/pages/chocolates.html
+++ b/pages/chocolates.html
@@ -78,8 +78,9 @@
                 
 
                     <article class="productos">
-                
+                    <div class="div">
                     <img src="../img/chocolates/oso-con-pelota_1.jpg" alt="Chocolate oso con pelota">
+                    </div>
                     <h3>AÑADIR AL CARRO</h3>
                     <P class="nombre-producto">Osso Selección</P>
                     <p>$5.500,00</p>
@@ -87,15 +88,18 @@
                     </article>
 
                     <article class="productos">
+                        <div class="div">
                     <img src="../img/chocolates/tejas-80_.png" alt="Chocolate tejas">
+                </div>
                     <h3>AÑADIR AL CARRO</h3>
                     <P class="nombre-producto">Tejas 60% cacao</P>
                     <p>$3.500,00</p>
                     </article>
 
                     <article class="productos">
-
+                    <div class="div">
                     <img src="../img/chocolates/marroc-100g-vt-ctab-0000517.png" alt="Chocolate marroc">
+                    </div>
                     <h3>AÑADIR AL CARRO</h3>
                     <P class="nombre-producto">Tableta marroc 100 gr</P>
                     <p>$5.000,00</p>
@@ -103,8 +107,9 @@
                 </article>
 
                 <article class="productos">
-
+                <div class="div">
                 <img src="../img/chocolates/trufas.jpg" alt="Trufas">
+            </div>
                 <h3>AÑADIR AL CARRO</h3>
                 <P class="nombre-producto">Trufas x15</P>
                 <p>$13.000,00</p>
@@ -113,7 +118,9 @@
 
 
                 <article class="productos">
+                    <div class="div">
                 <img src="../img/chocolates/minihuevos-x9ddl.png" alt="Mini huevo chocolate">
+                    </div>
                 <h3>AÑADIR AL CARRO</h3>
                 <P class="nombre-producto">Minihuevo lapiz x9, relleno de dulce de leche</P>
                 <p>$4.000,00</p>
@@ -121,7 +128,9 @@
 
 
                 <article class="productos">
+                    <div class="div">
                 <img src="../img/chocolates/surtidox250g.png" alt="chocolates surtidos">
+            </div>
                 <h3>AÑADIR AL CARRO</h3>
                 <P class="nombre-producto"> Chocolates surtidos x 250gr</P>
                 <p>$14.000,00</p>
@@ -129,8 +138,9 @@
 
 
                 <article class="productos">
-
+                <div class="div">
                 <img src="../img/chocolates/rapaunui_productos_trufas_x10.jpg" alt="Trufas">
+            </div>
                 <h3>AÑADIR AL CARRO</h3>
                 <P class="nombre-producto">Trufas x 10</P>
                 <p>$8.000,00</p>
@@ -139,8 +149,9 @@
 
 
                 <article class="productos">
-
+                <div class="div">
                 <img src="../img/chocolates/marroc_crocante-50g-vt-ctab-0001010.png" alt="Marroc crocante">
+            </div>
                 <h3>AÑADIR AL CARRO</h3>
                 <P class="nombre-producto">Barra de marroc crocante 50 gr</P>
                 <p>$2.500,00</p>
@@ -150,8 +161,9 @@
 
 
                 <article class="productos">
-
+                    <div class="div">
                 <img src="../img/chocolates/caja_mec_dia_del_padre_copia.jpg" alt="Chocolate día del padre">
+                </div>
                 <h3>AÑADIR AL CARRO</h3>
                 <P class="nombre-producto">Caja con 21 piezas de chocolate especial para papá</P>
                 <p>$23.500,00</p>
@@ -160,8 +172,9 @@
 
 
             <article class="productos">
-
+                <div class="div">
                 <img src="../img/chocolates/coleccion_amo_el_dulce_de_leche.jpg" alt="Colección de amo el chocolate">
+                </div>
                 <h3>AÑADIR AL CARRO</h3>
                 <P class="nombre-producto">Colección Amo el Chocolate y DDL</P>
                 <p>$16.000,00</p>
@@ -170,14 +183,18 @@
 
 
             <article class="productos">
+                <div class="div">
                 <img src="../img/chocolates/corazones.png" alt="Chocolate de corazones">
+                </div>
                 <h3>AÑADIR AL CARRO</h3>
                 <P class="nombre-producto">Corazón x5 unidades</P>
                 <p>$3.000,00</p>
             </article>
 
             <article class="productos">
+                <div class="div">
                 <img src="../img/chocolates/tab_minigota.png" alt="Chocolate mini gota">
+                </div>
                 <h3>AÑADIR AL CARRO</h3>
                 <P class="nombre-producto">Tableta mini gota con dulce de leche</P>
                 <p>$3.000,00</p>
