--- a/pages/glutenfree.html
+++ b/pages/glutenfree.html
@@ -68,7 +68,7 @@
     </header>
 
     <main>
-    <div class="principal-chocolate">
+    <div class="principal-chocolate2">
     <h1 class="titulo-secundario">Gluten free</h1>
     <img class="gluten-free" src="../img/sin-gluten.png" alt="Sin gluten">
 </div>
@@ -77,7 +77,9 @@
     <div class="grid-container">
 
     <article class="productos">
+        <div class="div">
     <img src="../img/gluten-free/rama-amargo-vt-cram-0000480.png" alt="Chocolate en rama">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Chocolate en rama</P>
     <p>$4.000,00</p>
@@ -85,7 +87,9 @@
     </article>
 
     <article class="productos">
+        <div class="div">
     <img src="../img/gluten-free/fondue-pote.png" alt="Fondue de chocolate">
+    </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Fondue de chocolate para microondas</P>
     <p>$5.000,00</p>
@@ -93,7 +97,9 @@
     </article>
 
     <article class="productos">
+        <div class="div">
     <img src="../img/gluten-free/crema-marroc.png" alt="Crema de marroc">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Crema marroc</P>
     <p>$$8.200,00</p>
@@ -102,7 +108,9 @@
     </article>
 
     <article class="productos">
+        <div class="div">
     <img src="../img/gluten-free/ositos-x6-blanco-vt-cinf-0000548.jpg" alt="Ositos de dulce de leche de chocolate blanco">
+        <div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Ositos de dulce de leche blanco x6 </P>
     <p>$4.500,00</p>
@@ -112,7 +120,9 @@
 
 
     <article class="productos">
+        <div class="div">
     <img src="../img/gluten-free/submarino.png" alt="Submarino">
+        </div> 
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Submarino</P>
     <p>$3.500,00</p>
@@ -122,7 +132,9 @@
 
 
     <article class="productos">
+        <div class="div">
     <img src="../img/gluten-free/capture-one-catalog2938-min.jpg" alt="Garrapiñada">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto"> Garrapiñada nueces pecan</P>
     <p>$4.500,00</p>
@@ -132,7 +144,9 @@
 
 
     <article class="productos">
+        <div class="div">
     <img src="../img/gluten-free/rapaunui_productos_choco-taza.jpg" alt="Chocolate en polvo">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Chocolate en polvo para taza </P>
     <p>$6.000,00</p>
@@ -141,7 +155,9 @@
 
 
     <article class="productos">
+        <div class="div">
     <img src="../img/gluten-free/tableta-choco_almendras_s_azucar.png" alt="Chocolate sin azúcar">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Tableta de chocolate con leche sin azúcar</P>
     <p>$5.000,00</p>
@@ -150,7 +166,9 @@
 
 
     <article class="productos">
+        <div class="div">
     <img src="../img/gluten-free/paila_almendra_semi_amargo_octogono_.jpg" alt="Almendras">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Almendras bañadas en chocolate semiamargo</P>
     <p>$5.000,00</p>
