--- a/pages/paraelte.html
+++ b/pages/paraelte.html
@@ -70,7 +70,7 @@
 </header>
 
 <main> 
-    <div class="principal-chocolate">
+    <div class="principal-chocolate1">
     <h1 class="titulo-para-el-te">Para el té</h1>
 </div>
     <section>
@@ -79,8 +79,9 @@
     <div class="grid-container">
 
     <article class="productos">
-    
+    <div class="div">
     <img src="../img/para-el-te/rapanuino-blanco.png" alt="Chocolate blanco">
+    </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">ChocoDelight chocolate blanco</P>
     <p>$3.500,00</p>
@@ -88,7 +89,9 @@
     </article>
 
     <article class="productos">
+        <div class="div">
     <img src="../img/para-el-te/alfajores_x_12.png" alt="Caja de alfajores">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Alfajores Mix chocolate x6</P>
     <p>$9.600,00</p>
@@ -96,7 +99,9 @@
     </article>
 
     <article class="productos">
+        <div class="div">
     <img src="../img/para-el-te/turron-mani.png" alt="Turrón de maní">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Turrón de maní</P>
     <p>$4.500,00</p>
@@ -106,7 +111,9 @@
     </article>
 
     <article class="productos">
+        <div class="div">
     <img src="../img/para-el-te/rapanuino-negro.png" alt="Chocolate amargo">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">ChocoDelight chocolate amargo</P>
     <p>$3.500,00</p>
@@ -116,7 +123,9 @@
 
 
     <article class="productos">
+        <div class="div">
     <img src="../img/para-el-te/rapaunui_productos_torta_galesa.jpg" alt="Torta galesa">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Torta  galesa grande</P>
     <p>$7.800,00</p>
@@ -127,7 +136,9 @@
 
 
     <article class="productos">
+        <div class="div">
     <img src="../img/gluten-free/fondue-pote.png" alt="Fondue de chocolate">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto"> Fondue de chocolate</P>
     <p>$5.00,00</p>
@@ -137,7 +148,9 @@
 
 
     <article class="productos">
+        <div class="div">
     <img src="../img/gluten-free/crema-marroc.png" alt="Crema marroc">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Crema marroc</P>
     <p>$8.200,00</p>
@@ -148,7 +161,9 @@
 
 
     <article class="productos">
+        <div class="div">
     <img src="../img/para-el-te/alfajores_x_12.png" alt="Caja de alfajores">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Caja de 12 alfajores</P>
     <p>$19.200,00</p>
@@ -158,7 +173,9 @@
 
 
     <article class="productos">
+        <div class="div">
     <img src="../img/para-el-te/alfajores_x_12.png" alt="Caja de alfajores">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Caja de 6 alfajores</P>
     <p>$9.600,00</p>
@@ -169,7 +186,9 @@
 
 
     <article class="productos">
+        <div class="div">
     <img src="../img/para-el-te/alfajor-glas_frambuesa.png" alt="Alfajor de frambuesas">
+        </div>
     <h3>AÑADIR AL CARRO</h3>
     <P class="nombre-producto">Alfajor de dulce de frambuesas con baño de glase</P>
     <p>$1.600,00</p>
@@ -179,7 +198,9 @@
 
 
     <article class="productos">
-        <img src="../img/para-el-te/alfajor-ddl_choco.png" alt="Alfajor de dulce de leche">  
+        <div class="div">
+        <img src="../img/para-el-te/alfajor-ddl_choco.png" alt="Alfajor de dulce de leche"> 
+        </div> 
         <h3>AÑADIR AL CARRO</h3>
         <P class="nombre-producto">Alfajor de dulce de leche con baño de chocolate</P>
         <p>$1.600,00</p>
@@ -188,7 +209,9 @@
     </article>
 
     <article class="productos">
+        <div class="div">
         <img src="../img/para-el-te/alfajor-choco_mousse.png" alt="Alfajor de mouse">
+        </div>
         <h3>AÑADIR AL CARRO</h3>
         <P class="nombre-producto">Alfajor de mouse de chocolate bañado en chocolate amargo</P>
         <p>$1.600,00</p>
